<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/userStatsScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <ScrollView 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >
        
        <RelativeLayout
        	android:layout_width="match_parent"
    		android:layout_height="wrap_content" 
    		android:orientation="vertical"
    		android:isScrollContainer="true"
    		android:paddingBottom="@dimen/activity_vertical_margin"
    		android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
    		android:paddingTop="@dimen/activity_vertical_margin" >
            
		    <TextView 
		        android:id="@+id/steamProfileURL"
		        android:paddingBottom="25dp"
		        android:textIsSelectable="true"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_alignTop="@+id/userStatsScreen"
		        android:layout_centerHorizontal="true"
		        android:gravity="center"
		        android:text="@string/steamProfileURL" />
		    
		    <TextView 
		        android:id="@+id/steamProfileName"
		        android:paddingBottom="25dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/steamProfileURL"
		        android:layout_centerHorizontal="true"
		        android:text="@string/steamProfileName" />
		    
		    <TextView
		        android:id="@+id/steamIdView"
		        android:paddingBottom="25dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/steamProfileName"
		        android:layout_centerHorizontal="true"
		        android:text="@string/steam_id_view" />
		        
		    <TextView
		        android:id="@+id/gameOnePlayed"
		        android:paddingBottom="25dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/steamIdView"
		        android:layout_centerHorizontal="true"
		        android:text="@string/gameOnePlayed" /> 
		        
		    <TextView
		        android:id="@+id/gameTwoPlayed"
		        android:paddingBottom="25dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/gameOnePlayed"
		        android:layout_centerHorizontal="true"
		        android:text="@string/gameTwoPlayed" /> 
		        
		    <TextView
		        android:id="@+id/recentUpdates"
		        android:paddingBottom="35dp"
		        android:paddingTop="35dp"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/gameTwoPlayed"
		        android:layout_centerHorizontal="true"
		        android:textSize="25sp"
		        android:text="@string/recentUpdates" />
		    
			    
		   <TextView
		        android:id="@+id/updateOne"
		        android:paddingBottom="20dp"
		        android:linksClickable="true"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/recentUpdates"
		        android:text="@string/updateOne" />
		   
		   <TextView
		        android:id="@+id/updateTwo"
		        android:paddingBottom="20dp"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/updateOne"
		        android:text="@string/updateTwo" />
		   
		   <TextView
		        android:id="@+id/updateThree"
		        android:paddingBottom="20dp"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/updateTwo"
		        android:text="@string/updateThree" />	
		        
		   <TextView
		        android:id="@+id/updateFour"
		        android:paddingBottom="20dp"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/updateThree"
		        android:text="@string/updateFour" />
		   
		   <TextView
		        android:id="@+id/updateFive"
		        android:paddingBottom="20dp"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/updateFour"
		        android:text="@string/updateFive" />
		   
		   <TextView
		        android:id="@+id/updateSix"
		        android:paddingBottom="20dp"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/updateFive"
		        android:text="@string/updateSix" />		
		        
		   <TextView
		        android:id="@+id/updateSeven"
		        android:paddingBottom="20dp"
		        android:autoLink="web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_below="@+id/updateSix"
		        android:text="@string/updateSeven" />		   	   	   
        
        </RelativeLayout>   
	</ScrollView>
</RelativeLayout>