<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/heroIcon"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:layout_gravity="left"
        android:contentDescription="@string/imageIcon"
        android:padding="5dp" />

    <TextView
        android:id="@+id/heroName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:text="@string/heroName" />    
           
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <ImageView
		    android:id="@+id/heroesAttribute"            		    
		    android:layout_gravity="right"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:paddingTop="20dp" 
		    android:contentDescription="@string/heroesAttribute" />
    
    </LinearLayout>

</LinearLayout>