<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/startingScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/itemsButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/heroesButton"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:text="@string/items_button" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/itemsButton"
        android:layout_gravity="right"
        android:text="@string/signin_button" />

    <Button
        android:id="@+id/heroesButton"
        android:layout_width="240dp"
        android:layout_height="48dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/headerImage"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:minHeight="48dip"
        android:text="@string/heroes_button" />

    <ImageView
        android:id="@+id/headerImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/headerImage"
        android:gravity="center_horizontal"
        android:src="@drawable/dotalogo" />

    <ImageView
        android:id="@+id/heroesThumbnail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/heroesButton"
        android:layout_alignLeft="@+id/itemsThumbnail"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/heroesButton"
        android:layout_toLeftOf="@+id/heroesButton"
        android:adjustViewBounds="false"
        android:contentDescription="@string/heroesThumbnail"
        android:src="@drawable/strength" />

    <ImageView
        android:id="@+id/itemsThumbnail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignBottom="@+id/itemsButton"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/itemsButton"
        android:layout_toLeftOf="@+id/itemsButton"
        android:contentDescription="@string/itemsThumbnail"
        android:src="@drawable/agility" />

    <ImageView
        android:id="@+id/signinThumbnail"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/signInButton"
        android:layout_toLeftOf="@+id/signInButton"
        android:contentDescription="@string/signinThumbnail"
        android:src="@drawable/intelligence" />
    
<!--     <TextView  -->
<!--         android:id="@+id/steamProfileURL" -->
<!--         android:paddingBottom="25dp" -->
<!--         android:textIsSelectable="true" -->
<!--         android:autoLink="web" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_above="@+id/steamIdView" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:gravity="center" -->
<!--         android:text="@string/steamProfileURL" /> -->
    
<!--     <TextView  -->
<!--         android:id="@+id/steamProfileName" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_above="@+id/steamIdView" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:text="@string/steamProfileName" /> -->
    
<!--     <TextView -->
<!--         android:id="@+id/steamIdView" -->
<!--         android:layout_width="wrap_content" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:layout_above="@+id/createdByTextview" -->
<!--         android:layout_centerHorizontal="true" -->
<!--         android:text="@string/steam_id_view" />     -->

    <TextView
        android:id="@+id/createdByTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/createdByTextview"
        android:textSize="12sp" />

</RelativeLayout>